Implemented ability to use objects when searching in database