@@ -39,28 +39,28 @@ public class KissenQueryComponent<T extends QueryComponent<?>> implements QueryC
     }
 
     @Override
-    public @NotNull T or(@NotNull Column column, @NotNull String value) {
+    public @NotNull T or(@NotNull Column column, @NotNull Object value) {
         filterQueries.add(new KissenFilterQuery(column, value, FilterOperator.OR));
         return (T) this;
     }
 
     @Override
     public @NotNull T orExact(@NotNull Column column, @NotNull String value) {
-        return or(column, "\\b%s\\b".formatted(value));
+        return or(column, String.format("\\b%s\\b", value));
     }
 
     @Override
-    public @NotNull T and(@NotNull Column column, @NotNull String value) {
+    public @NotNull T and(@NotNull Column column, @NotNull Object value) {
         filterQueries.add(new KissenFilterQuery(column, value, FilterOperator.AND));
         return (T) this;
     }
 
     @Override
     public @NotNull T andExact(@NotNull Column column, @NotNull String value) {
-        return and(column, "\\b%s\\b".formatted(value));
+        return and(column, String.format("\\b%s\\b", value));
     }
 
-    public @NotNull T initialise(@NotNull Column column, @NotNull String value)
+    public @NotNull T initialise(@NotNull Column column, @NotNull Object value)
     {
         filterQueries.add(new KissenFilterQuery(column, value, FilterOperator.INIT));
         return (T) this;
